Rerouting done